--- a/dictionaryActivity.ipynb
+++ b/dictionaryActivity.ipynb
@@ -565,7 +565,7 @@
     "# 16. Change Nabi's city to Kandahar and update the previous city with key:pre_city(pre_city:Kabul)\n",
     "# 17. Change Nabi's school name with id=003 to 'College' and add key:pre_id(pre_id:003)\n",
     "# 18. Print the ahmad details like a table just mentioned fields(name ,Father name,age,address(concat(country,city,street,zipcode))) first print title then print values\n",
-    "# 19. What kind of contact information do we have available from Karim?\n",
+    "# 19. What kind of contact information do we have available from Karim?432\n",
     "# 20. Print the total of max score of student(who took the max number) and min score of student (max+min)"
    ]
   },
@@ -575,14 +575,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "59"
       ]
      },
+     "execution_count": 65,
      "metadata": {},
-     "execution_count": 65
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -600,19 +600,20 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{'Ahmad', 'Elyas', 'Karim', 'Mahmood', 'Nabi'}"
       ]
      },
+     "execution_count": 66,
      "metadata": {},
-     "execution_count": 66
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# 2. Print name of students,but don't display repeated names(from each repeated name one should be display)?\n",
-    "name={student[0]['name'],student[1]['name'],student[2]['name'],student[3]['name'],student[4]['name'],student[5]['name'],student[6]['name']}\n",
+    "name={student[0]['name'],student[1]['name'],student[2]['name'],\n",
+    "      student[3]['name'],student[4]['name'],student[5]['name'],student[6]['name']}\n",
     "name"
    ]
   },
@@ -622,10 +623,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Ahmad 282\nMahmood 275\nNabi 275\nElyas 263\nElyas 263\nAhmad 278\nKarim 274\n"
+      "Ahmad 282\n",
+      "Mahmood 275\n",
+      "Nabi 275\n",
+      "Elyas 263\n",
+      "Elyas 263\n",
+      "Ahmad 278\n",
+      "Karim 274\n"
      ]
     }
    ],
@@ -697,7 +704,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{'country': 'Afghanistan',\n",
@@ -708,8 +714,9 @@
        " 'previous_street': 'Badam Bagh, Karte Parwan'}"
       ]
      },
+     "execution_count": 75,
      "metadata": {},
-     "execution_count": 75
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -727,14 +734,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{'Elyas': 2, 'Mahmood': 1, 'Nabi': 1, 'Karim': 1, 'Ahmad': 2}"
       ]
      },
+     "execution_count": 37,
      "metadata": {},
-     "execution_count": 37
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -783,21 +790,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "True\n"
+     "ename": "NameError",
+     "evalue": "name 'student' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-2441ea6e065e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 7. Print the addresses of student which are same.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0ms1_add\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtuple\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstudent\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'address'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0ms2_add\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtuple\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstudent\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'address'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'student' is not defined"
      ]
     }
    ],
    "source": [
     "# 7. Print the addresses of student which are same. \n",
-    "s1_add=tuple(student[-1]['address'].values())\n",
-    "s2_add=tuple(student[1]['address'].values())"
+    "# s1_add=tuple(student[-1]['address'].values())\n",
+    "# s2_add=tuple(student[1]['address'].values())\n"
    ]
   },
   {
@@ -806,10 +817,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Ahmad 94.66666666666667\nMahmood 92.33333333333333\nNabi 92.33333333333333\nElyas 88.33333333333333\nElyas 88.33333333333333\nAhmad 94.66666666666667\nKarim 92.0\n"
+      "Ahmad 94.66666666666667\n",
+      "Mahmood 92.33333333333333\n",
+      "Nabi 92.33333333333333\n",
+      "Elyas 88.33333333333333\n",
+      "Elyas 88.33333333333333\n",
+      "Ahmad 94.66666666666667\n",
+      "Karim 92.0\n"
      ]
     }
    ],
@@ -830,14 +847,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "False"
       ]
      },
+     "execution_count": 189,
      "metadata": {},
-     "execution_count": 189
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -851,10 +868,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "1997\n1999\n1996\n1996\n1996\n1997\n1997\n"
+      "1997\n",
+      "1999\n",
+      "1996\n",
+      "1996\n",
+      "1996\n",
+      "1997\n",
+      "1997\n"
      ]
     }
    ],
@@ -891,14 +914,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "1"
       ]
      },
+     "execution_count": 201,
      "metadata": {},
-     "execution_count": 201
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -912,7 +935,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[{'id': '001', 'school': 'Primary School'},\n",
@@ -921,8 +943,9 @@
        " {'id': '004', 'school': 'graduate school'}]"
       ]
      },
+     "execution_count": 208,
      "metadata": {},
-     "execution_count": 208
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -942,14 +965,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['0799000110', '0798111001', '0788110011']"
       ]
      },
+     "execution_count": 216,
      "metadata": {},
-     "execution_count": 216
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -964,14 +987,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "292"
       ]
      },
+     "execution_count": 219,
      "metadata": {},
-     "execution_count": 219
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1012,10 +1035,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "name | Father | age |    address    |\nAhmad | Mohammad | 23 |Afghanistan,Kabul,Taimany,10001|\n"
+      "name | Father | age |    address    |\n",
+      "Ahmad | Mohammad | 23 |Afghanistan,Kabul,Taimany,10001|\n"
      ]
     }
    ],
@@ -1033,14 +1057,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "dict_keys(['country', 'city', 'zip_code', 'street', 'phones'])"
       ]
      },
+     "execution_count": 244,
      "metadata": {},
-     "execution_count": 244
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1054,10 +1078,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "max score: Ahmad - 282\nmin score: Elyas - 263\n"
+      "max score: Ahmad - 282\n",
+      "min score: Elyas - 263\n"
      ]
     }
    ],
@@ -1097,7 +1122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
